objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Assigned_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will help to send an email notification to the  assignor on any update of this task.</description>
        <inlineHelpText>Select &quot;Task Assignor&apos;s Name&quot; here. This field will help to send an email notification to the  assignor on any update of this task.</inlineHelpText>
        <label>Assigned By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AssignedBy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Area__c</fullName>
        <formula>CreatedBy.Division</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_Activity_Type__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package.  If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>IF(CONTAINS( Subject , &quot;Email&quot;), &quot;Email&quot;, IF(CONTAINS( Subject , &quot;Cold Call&quot;), &quot;Cold Call&quot;, IF(CONTAINS( Subject , &quot;Call&quot;), &quot;Call&quot;, IF(CONTAINS( Subject , &quot;Meeting&quot;), &quot;Meeting&quot;, IF(CONTAINS( Subject , &quot;On Site Visit&quot;), &quot;Site Visit&quot;, IF(CONTAINS( Subject , &quot;Quote&quot;), &quot;Send Letter/Quote&quot;, &quot;Other&quot;))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Activity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100, &quot;Key Event/Task Details Captured&quot;,&quot;Missing: &quot;&amp;IF( LEN( Subject ) &lt; 3,&quot;Quality Subject Description, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN(WhoId)=0,&quot;Contact/Lead Reference, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN(WhatId)=0,&quot;Account/Opportunity Reference&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( LEN(  Subject  ) &lt; 3, 0,30) + IF( LEN(  WhoId ) = 0, 0,40) + IF( LEN(  WhatId ) = 0, 0,30)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HubSpot_Inc__Guid__c</fullName>
        <description>Unique ID for HubSpot related Tasks</description>
        <label>Guid</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_Owner_Email__c</fullName>
        <formula>$User.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SF Owner Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>i__EmailHasAttachments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does the linked email have Attachments?</description>
        <inlineHelpText>Does the linked email have Attachments?</inlineHelpText>
        <label>Linked email has attachments?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>i__EmailId__c</fullName>
        <description>deprecated</description>
        <inlineHelpText>deprecated</inlineHelpText>
        <label>EmailId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>i__Email__c</fullName>
        <description>ID of the iHance Email object this Task was copied from.</description>
        <externalId>true</externalId>
        <inlineHelpText>ID of the iHance Email object this Task was copied from.</inlineHelpText>
        <label>Email</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>